	  - Instrument name is now exported for multi-voice staff too.
	* R463: ADDED: Some more LilyPond lyrics improvements.
	* R464: FIXED: Updated example4.not - new hyphens and melismas implemented. Removed stanza numbers - they show up in Lily now out of the box.
	* R465: FIXED: kpdf is now the default preview program.
	* R466: Improved LilyPond export filter:
	  - Support for LilyPond 2.8.x. The exported syntax works out of the box.
	  - New drum note for rectangle note - diamond.
	  - Different drum notes can be present in a single chord now. LilyPond 2.8.x is needed for this, because we use \tweak function.
	* R467: FIXED: Removed mixed ties warning in Lily export. LilyPond 2.4.x and on supports mixed ties perfectly.
	* R468: ADDED: Ties and Slurs are now drawn with wide pen. This gives better readability of the score.
	* R469: FIXED: Some UI polishments. Updated translations.
	* R470: FIXED:
	  - Font size in Lily export works again.
	  - Added official font sizes from Lily documentation:
	    - 11.22 pt (pocket scores)
		- 12.60 pt
		- 14.14 pt
		- 15.87 pt
		- 17.82 pt (song books)
		- 20 pt (standard parts)
		- 22.45 pt
		- 25.2 pt
	* R471: FIXED: A typo in tips&trick - lines are placed using the left mouse button, not middle. Thanks to Takeshi Hamasaki for spotting this.
	* R472: ADDED: previewprint::setupPrinting returns whether setup
	was successfull or not and checks if preview is still running
	        FIXED: create preview process only if it wasn't created already
		FIXED: print/preview: stop if preview is still running
		FIXED: delete form_ in IntPrinter destructor (does not remove the dialogpage though -- might lead to crashes!)
	* R473: ADDED: Japanese translation thanks to Takeshi Hamasaki.